# ALU-CLI

./: Cargo.toml  LICENSE  README.md  SKILL.md  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
src/: main.rs  math.rs
tests/: eval.rs
